include twilio-sdk as a project dependecy

--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ repositories {
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
+    compile("com.twilio.sdk:twilio-java-sdk:5.8.0")
     testCompile("junit:junit")
 }
 
