include index page
add configuration and files with the landing page of the application

--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,8 @@ repositories {
 }
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-web")
     compile("com.twilio.sdk:twilio-java-sdk:5.8.0")
+    compile("org.springframework.boot:spring-boot-starter-thymeleaf")
     testCompile("junit:junit")
 }
 
