include call endpoint
include endpoint responsible for handling call requests from
index page and generating a call to a twilio number.

--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compile("com.twilio.sdk:twilio-java-sdk:5.8.0")
     compile("org.springframework.boot:spring-boot-starter-thymeleaf")
     testCompile("junit:junit")
+    testCompile("org.mockito:mockito-all:1.9.5")
 }
 
 task wrapper(type: Wrapper) {
