add tutorial to the application repo

--- a/tutorial/config.json
+++ b/tutorial/config.json
@@ -1,6 +1,6 @@
 {
     "title": "Learn You clicktocall-spring For Much Win",
-    "repo": "<your GitHub username>/<GitHub repo name>",
-    "description": "Thanks for writing a tutorial with Viewsaurus! This example tutorial will show you the basic functionality of Viewsaurus. Click the \"Start\" button below to see how Viewsaurus works.",
+    "repo": "TwilioDevEd/clicktocall-spring",
+    "description": "Click-to-call enables your company to convert web traffic into phone calls with the click of a button. Learn how to implement it in minutes.",
     "heroku": false
 }
