Silly title remained in.

--- a/tutorial/config.json
+++ b/tutorial/config.json
@@ -1,5 +1,5 @@
 {
-    "title": "Learn You clicktocall-spring For Much Win",
+    "title": "Click-to-call",
     "repo": "TwilioDevEd/clicktocall-spring",
     "description": "Click-to-call enables your company to convert web traffic into phone calls with the click of a button. Learn how to implement it in minutes.",
     "heroku": false
