--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ repositories {
 }
 
 dependencies {
-    compile("com.twilio.sdk:twilio-java-sdk:5.8.0")
+    compile("com.twilio.sdk:twilio:7.0.0-rc-25")
     compile("org.springframework.boot:spring-boot-starter-thymeleaf")
     testCompile("junit:junit:4.12")
     testCompile("org.mockito:mockito-core:1.10.19")
