--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ repositories {
 }
 
 dependencies {
-    compile("com.twilio.sdk:twilio:7.0.0-rc-29")
+    compile("com.twilio.sdk:twilio:7.17.0")
     compile("ch.qos.logback:logback-access:${logbackVersion}")
     compile("ch.qos.logback:logback-classic:${logbackVersion}")
     compile("org.springframework.boot:spring-boot-starter-thymeleaf:1.3.0.RELEASE")
