--- a/build.gradle
+++ b/build.gradle
@@ -1,52 +1,41 @@
-buildscript {
-    repositories {
-        maven { url "http://repo.spring.io/libs-release" }
-        mavenLocal()
-        mavenCentral()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.1.7.RELEASE")
-    }
+plugins {
+    id 'java'
+    id 'eclipse'
+    id 'idea'
+    id 'org.springframework.boot' version '2.2.6.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
 }
 
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'idea'
-apply plugin: 'spring-boot'
-
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = 11
+targetCompatibility = 11
 
 jar {
     baseName = 'clicktocall-spring'
     version =  '0.1.0'
 }
 
-ext['logbackVersion'] = '1.1.11'
+ext['logbackVersion'] = '1.2.3'
+ext['springBootVer'] = '2.2.6.RELEASE'
 
 repositories {
-    mavenLocal()
-    mavenCentral()
-    maven { url "http://repo.spring.io/libs-release" }
+    jcenter()
 }
 
 dependencies {
-    compile("com.twilio.sdk:twilio:7.0.0-rc-29")
-    compile("ch.qos.logback:logback-access:${logbackVersion}")
-    compile("ch.qos.logback:logback-classic:${logbackVersion}")
-    compile("org.springframework.boot:spring-boot-starter-thymeleaf:1.3.0.RELEASE")
-    compile('net.rakugakibox.springbootext:spring-boot-ext-logback-access:1.6')
+    implementation(group:'javax.servlet', name:'javax.servlet-api', version:'4.0.1')
+    implementation(group:'com.twilio.sdk', name:'twilio', version:'7.49.1')
+    implementation(group:'ch.qos.logback', name:'logback-access', version:"${logbackVersion}")
+    implementation(group:'ch.qos.logback', name:'logback-classic', version:"${logbackVersion}")
+    implementation(group:'org.springframework.boot', name:'spring-boot-starter-web')
+    implementation(group:'org.springframework.boot', name:'spring-boot-starter-thymeleaf')
+    implementation(group:'net.rakugakibox.springbootext', name:'spring-boot-ext-logback-access', version:'1.6')
 
-    testCompile("junit:junit:4.12")
-    testCompile("org.mockito:mockito-core:1.10.19")
-}
-
-task wrapper(type: Wrapper) {
-    gradleVersion = '2.3'
+    testImplementation(group:'junit', name:'junit', version:'4.13')
+    testImplementation(group:'org.mockito', name:'mockito-core', version:'3.3.3')
 }
 
 test {
-  testLogging {
-    exceptionFormat = 'full'
-  }
+    testLogging {
+        exceptionFormat = 'full'
+    }
 }
