Add dotenv and custom error handler

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # Twilio API credentials
 # Found at https://www.twilio.com/user/account/voice
-export TWILIO_ACCOUNT_SID=ACXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-export TWILIO_AUTH_TOKEN=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+TWILIO_ACCOUNT_SID=ACXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+TWILIO_AUTH_TOKEN=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 
 # Twilio phone number
 # Purchase one at https://www.twilio.com/user/account/phone-numbers
-export TWILIO_PHONE_NUMBER=+15552737123
+TWILIO_PHONE_NUMBER=+15552737123
