--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation(group:'org.springframework.boot', name:'spring-boot-starter-web')
     implementation(group:'org.springframework.boot', name:'spring-boot-starter-thymeleaf')
     implementation(group:'net.rakugakibox.springbootext', name:'spring-boot-ext-logback-access', version:'1.6')
+    implementation(group:'me.paulschwarz', name:'spring-dotenv', version:'2.4.1')
 
     testImplementation(group:'junit', name:'junit', version:'4.13')
     testImplementation(group:'org.mockito', name:'mockito-core', version:'3.3.3')
